--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-    "git.ignoreLimitWarning": true
+	"git.ignoreLimitWarning": true,
+	"liveSassCompile.settings.formats": [
+		{
+			"format": "compressed",
+			"extensionName": ".min.css",
+			"savePath": "/public/css"
+		}
+	],
+	"liveSassCompile.settings.generateMap": false
 }
