--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
     "handlebars": "^4.7.7",
-    "mongoose": "^5.11.19"
+    "mongoose": "^5.11.19",
+    "validator": "^13.5.2"
   }
 }
