--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-mongodb-session": "^2.4.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
+    "express-session": "^1.17.1",
     "handlebars": "^4.7.7",
     "mongoose": "^5.11.19",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "validator": "^13.5.2"
   }
 }
