--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-session": "^1.17.1",
     "handlebars": "^4.7.7",
     "mongoose": "^5.11.19",
+    "mongoose-sequence": "^5.3.1",
     "validator": "^13.5.2"
   }
 }
